Summarize Sanjana Dataset/summarize_only-no_nas_7-26_58301336.err
  File "/home/kin672/gentb-summer22/Summarize Sanjana Dataset/summarize_only-no_nas.py", line 31
    if (len(num_resistant) == 1)
                                ^
SyntaxError: invalid syntax
